--- a/oefening-02/index.html
+++ b/oefening-02/index.html
@@ -1,9 +1,69 @@
 <!DOCTYPE html>
 <html lang="nl-BE">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>oefening 2</title>
-  </head>
-  <body></body>
+
+<head>
+  <!-- Required meta tags -->
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+  <!-- JavaScript: Bootstrap Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"
+    defer></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>oefening 2</title>
+</head>
+
+
+<body>
+  <caption>overzicht boekhouding</caption>
+  <table>
+    <thead>
+      <tr>
+        <th>bedrijf</th>
+        <th>omschrijving</th>
+        <th>in</th>
+        <th>uit</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Bike center</td>
+        <td>email nieuwsbrief</td>
+        <td>350.00 &euro;</td>
+      </tr>
+
+      <tr>
+        <td>bakkerij</td>
+        <td>webhosting</td>
+        <td></td>
+        <td>1500.00 &euro;</td>
+      </tr>
+      <tr>
+        <td>architectuur</td>
+        <td>webdesign</td>
+        <td>5,750.00 &euro;</td>
+        <td></td>
+      </tr>
+      <tr>
+        <td>krantenwinkel</td>
+        <td>domeinnaam</td>
+        <td></td>
+        <td>45.00 &euro;</td>
+      </tr>
+    </tbody>
+    <tfoot>
+      <tr>
+        <td></td>
+        <td></td>
+        <td>6100€</td>
+        <td>1454€</td>
+      </tr>
+    </tfoot>
+  </table>
+</body>
+
 </html>
